<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".canteen.Canteen_selected_user">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg5"
        android:id="@+id/csu_s1"
        android:padding="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/semitransparent"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/csu_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_image_black_24dp" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/semi_white">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="3"
                    android:paddingHorizontal="10dp"
                    android:id="@+id/csu_l2"
                    android:layout_marginVertical="15dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textStyle="bold"
                        android:textSize="15dp"
                        android:textColor="@color/black"
                        android:text="@string/id"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:id="@+id/csu_id"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="3"
                    android:layout_below="@+id/csu_l2"
                    android:paddingHorizontal="10dp"
                    android:id="@+id/csu_l3"
                    android:layout_marginVertical="15dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textStyle="bold"
                        android:textSize="15dp"
                        android:textColor="@color/black"
                        android:text="@string/name"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:id="@+id/csu_name"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="3"
                    android:paddingHorizontal="10dp"
                    android:id="@+id/csu_l4"
                    android:layout_below="@+id/csu_l3"
                    android:layout_marginVertical="15dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textStyle="bold"
                        android:textSize="15dp"
                        android:textColor="@color/black"
                        android:text="@string/email"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:id="@+id/csu_email"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="3"
                    android:paddingHorizontal="10dp"
                    android:id="@+id/csu_l5"
                    android:layout_below="@+id/csu_l4"
                    android:layout_marginVertical="15dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textStyle="bold"
                        android:textSize="15dp"
                        android:textColor="@color/black"
                        android:text="@string/phone"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:id="@+id/csu_phone"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="3"
                    android:paddingHorizontal="10dp"
                    android:id="@+id/csu_l6"
                    android:layout_below="@+id/csu_l5"
                    android:layout_marginVertical="15dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textStyle="bold"
                        android:textSize="15dp"
                        android:textColor="@color/black"
                        android:text="@string/dob"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:id="@+id/csu_dob"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="3"
                    android:paddingHorizontal="10dp"
                    android:id="@+id/csu_l7"
                    android:layout_below="@+id/csu_l6"
                    android:layout_marginVertical="15dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textStyle="bold"
                        android:textSize="15dp"
                        android:textColor="@color/black"
                        android:text="@string/gender"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:id="@+id/csu_gender"/>
                </LinearLayout>

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/csu_l1"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp"
        android:weightSum="2">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Remove"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:background="@drawable/login_register_button"
            android:layout_margin="10dp"
            android:id="@+id/csu_remove" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Block"
            android:textColor="@color/white"
            android:layout_margin="10dp"
            android:background="@drawable/login_register_button"
            android:layout_weight="1"
            android:id="@+id/csu_block" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/csu_l8"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp"
        android:weightSum="2">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Unblock"
            android:textColor="@color/white"
            android:layout_margin="10dp"
            android:background="@drawable/login_register_button"
            android:layout_weight="1"
            android:id="@+id/csu_unblock" />
    </LinearLayout>

</RelativeLayout>