<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey"
    tools:context=".admin.Admin_profile">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        android:background="@drawable/bg7">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/semi_white"
            android:id="@+id/ap_r1"
            android:layout_centerInParent="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:paddingHorizontal="10dp"
                android:id="@+id/ap_l1"
                android:layout_marginVertical="15dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textSize="15dp"
                    android:textColor="@color/black"
                    android:text="@string/name"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:id="@+id/ap_name"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:paddingHorizontal="10dp"
                android:id="@+id/ap_l2"
                android:layout_below="@+id/ap_l1"
                android:layout_marginVertical="15dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textSize="15dp"
                    android:textColor="@color/black"
                    android:text="@string/id"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:id="@+id/ap_id"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:paddingHorizontal="10dp"
                android:id="@+id/ap_l3"
                android:layout_below="@+id/ap_l2"
                android:layout_marginVertical="15dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textSize="15dp"
                    android:textColor="@color/black"
                    android:text="@string/phone"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:id="@+id/ap_phone"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:paddingHorizontal="10dp"
                android:id="@+id/ap_l4"
                android:layout_below="@+id/ap_l3"
                android:layout_marginVertical="15dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textSize="15dp"
                    android:textColor="@color/black"
                    android:text="@string/email"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:id="@+id/ap_email"/>
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ap_r2"
            android:background="@color/semi_white"
            android:layout_centerInParent="true">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ap_edt_phone"
                android:layout_margin="5dp"
                android:hint="@string/phone"
                android:maxLength="10"
                android:background="@drawable/orange_edttxt"
                android:inputType="phone" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ap_edt_email"
                android:layout_below="@+id/ap_edt_phone"
                android:layout_margin="5dp"
                android:inputType="textEmailAddress"
                android:hint="email"
                android:background="@drawable/orange_edttxt" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ap_edt_email"
                android:orientation="horizontal"
                android:id="@+id/linearbutton1"
                android:layout_margin="5dp"
                android:weightSum="2">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Update"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:background="@drawable/login_register_button"
                    android:layout_margin="10dp"
                    android:id="@+id/ap_update" />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Cancel"
                    android:textColor="@color/white"
                    android:layout_margin="10dp"
                    android:background="@drawable/login_register_button"
                    android:layout_weight="1"
                    android:id="@+id/ap_cancel"
                    />
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>