<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/grey"
    android:layout_height="match_parent"
    tools:context=".user.User_selected_item">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/bg7">
        <com.github.florent37.shapeofview.shapes.ArcView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:elevation="4dp"
            android:layout_margin="10dp"
            app:shape_arc_cropDirection="outside"
            app:shape_arc_height="25dp"
            app:shape_arc_position="bottom"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@color/grey"
                android:id="@+id/usi_image"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/usi_name"
                android:layout_margin="20dp"
                android:background="@color/semi_white"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:fontFamily="sans-serif"
                android:textSize="25dp"/>
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:id="@+id/usi_fav"
                    android:layout_marginBottom="20dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/ic_favorite_black_24dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"/>
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:id="@+id/usi_unfav"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="20dp"
                    android:src="@drawable/ic_favorite_border_black_24dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>
        </com.github.florent37.shapeofview.shapes.ArcView>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/semitransparent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:id="@+id/usi_l1"
                android:weightSum="3"
                android:layout_marginVertical="15dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="15dp"
                    android:layout_weight="2"
                    android:textColor="@color/white"
                    android:text="@string/price"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:id="@+id/usi_price"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:id="@+id/usi_l2"
                android:weightSum="3"
                android:layout_below="@id/usi_l1"
                android:layout_marginVertical="15dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_weight="2"
                    android:textSize="15dp"
                    android:textColor="@color/white"
                    android:text="@string/quantity"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:id="@+id/usi_quantity"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:id="@+id/usi_l3"
                android:weightSum="3"
                android:layout_below="@+id/usi_l2"
                android:layout_marginVertical="15dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_weight="2"
                    android:textSize="15dp"
                    android:textColor="@color/white"
                    android:text="@string/type"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:id="@+id/usi_type"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:paddingHorizontal="20dp"
                android:layout_below="@+id/usi_l3">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/usi_minus"
                    android:text="-"
                    android:textColor="@color/white"
                    android:textSize="40dp"
                    android:background="@drawable/login_register_button"
                    android:layout_weight="2"/>

                <EditText
                    android:id="@+id/usi_count"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="1"
                    android:textSize="25dp"
                    android:textColor="@color/white" />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/usi_plus"
                    android:text="+"
                    android:textSize="40dp"
                    android:textColor="@color/white"
                    android:background="@drawable/login_register_button"
                    android:layout_weight="2"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/cai_l1"
                android:layout_alignParentBottom="true"
                android:layout_below="@+id/cai_quantity"
                android:layout_margin="5dp"
                android:weightSum="2">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Add cart"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:background="@drawable/login_register_button"
                    android:layout_margin="10dp"
                    android:id="@+id/usi_add" />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Order"
                    android:textColor="@color/white"
                    android:layout_margin="10dp"
                    android:background="@drawable/login_register_button"
                    android:layout_weight="1"
                    android:id="@+id/usi_order"
                    />
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>